# titan-title-review-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval_out.txt  main.py  pyproject.toml  pytest2.txt  pytest_eval.txt  pytest_out.txt  requirements.txt  streamlit_app.py
baml_src/: title_document.baml
data/gold/: bartlesville_ok_lis_pendens_price_tower_2024.TitleReviewSummary.gold.json  bartlesville_ok_lis_pendens_price_tower_2024.title_document.json  fidelity_nv_harrahs_lasvegas_commitment_2017.title_document.json  freddiemac_colorado_deed_of_trust_2021.title_document.json  fromthepage_1875_handwritten_deed.TitleReviewSummary.gold.json  (+8 more)
data/raw/: MANIFEST.md
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  EVALUATION.md
eval/: results_post.json  results_pre.json
examples/: edits.json  output_v1.json  output_v2.json  rules_s4_open_encumbrances_and_liens.yaml
rules/: s1_vesting_and_estate.yaml  s2_legal_description.yaml  s3_chain_of_title.yaml  s4_open_encumbrances_and_liens.yaml  s5_easements_and_restrictions.yaml  s6_requirements_schedule_b_i.yaml  s7_exceptions_schedule_b_ii.yaml  s8_taxes_and_survey_matters.yaml
scripts/: make_simulated_edits.py  start_docker_and_qdrant.ps1  trace_draft.py
showcase/: app.js  index.html  styles.css
tests/: test_config.py  test_draft_orchestrator.py  test_eval.py  test_hybrid_retrieval.py  test_ingest.py  test_learn.py  test_persist_sqlite.py  test_schemas.py  test_telemetry.py
titan/: _wall_clock_kill.py  cli.py  config.py  errors.py  llm_cache.py  llm_client.py  sections.py
(+28 files in other folders)
