[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specteraiengr"
version = "0.1.0"
description = "Title-Insurance Analyst (Titan) - Title Review AI for Pearson Specter Litt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling-core>=0.1.0",
    "docling>=0.1.0",
    "transformers>=4.30.0",
    "baml-py>=0.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langfuse>=2.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "sqlmodel>=0.0.14",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.28.0",
    "ragas>=0.0.1",
    "google-generativeai>=0.3.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
titan = "titan.cli:main"
